k3s/kubernetes-dashboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
    - host: k3s.butterflycluster.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-web
                port:
                  number: 8000
  tls:
    - hosts:
        - k3s.butterflycluster.com
      secretName: tls-secret
